Bfs DPOP Complete